Centralise HUD inside the level. Make backpack clickable on Mobile to bring up pause menu.

--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
@@ -249,4 +249,7 @@
   <data name="ShowVirtualGamePad" xml:space="preserve">
     <value>Mostrar GamePad virtual: </value>
   </data>
+  <data name="TapToPause" xml:space="preserve">
+    <value>Toca para pausar</value>
+  </data>
 </root>
