Add clickable text buttons that are only shown for mobile, so they can actually exit menus.

--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
@@ -190,10 +190,10 @@
     <value>Acerca de</value>
   </data>
   <data name="NoButtonText" xml:space="preserve">
-    <value>No = Botón B, Esc</value>
+    <value>[ No ]</value>
   </data>
   <data name="YesButtonText" xml:space="preserve">
-    <value>Sí = Botón A, Espacio, Enter</value>
+    <value>[ Sí ]</value>
   </data>
   <data name="DisplayMode" xml:space="preserve">
     <value>Modo de Pantalla: {0}</value>
@@ -248,6 +248,12 @@
   </data>
   <data name="ShowVirtualGamePad" xml:space="preserve">
     <value>Mostrar GamePad virtual: </value>
+  </data>
+  <data name="YesButtonHelp" xml:space="preserve">
+    <value>Sí = Botón A, Espacio, Enter</value>
+  </data>
+  <data name="NoButtonHelp" xml:space="preserve">
+    <value>No = Botón B, Esc</value>
   </data>
   <data name="TapToPause" xml:space="preserve">
     <value>Toca para pausar</value>
