--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.fr-FR.resx
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.fr-FR.resx
@@ -190,10 +190,10 @@
     <value>À Propos</value>
   </data>
   <data name="NoButtonText" xml:space="preserve">
-    <value>Non = Bouton V, Esc</value>
+    <value>[ Non ]</value>
   </data>
   <data name="YesButtonText" xml:space="preserve">
-    <value>Oui = Bouton A, Espace, Entrée</value>
+    <value>[ Oui ]</value>
   </data>
   <data name="DisplayMode" xml:space="preserve">
     <value>Mode D'affichage : {0}</value>
@@ -248,6 +248,12 @@
   </data>
   <data name="ShowVirtualGamePad" xml:space="preserve">
     <value>Afficher le GamePad virtuel: </value>
+  </data>
+  <data name="YesButtonHelp" xml:space="preserve">
+    <value>Non = Bouton V, Esc</value>
+  </data>
+  <data name="NoButtonHelp" xml:space="preserve">
+    <value>Oui = Bouton A, Espace, Entrée</value>
   </data>
   <data name="TapToPause" xml:space="preserve">
     <value>Appuyez pour mettre en pause</value>
