--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.es-ES.resx
@@ -117,149 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Play" xml:space="preserve">
-    <value>Jugar</value>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Ajustes</value>
-  </data>
-  <data name="Exit" xml:space="preserve">
-    <value>Salir</value>
-  </data>
-  <data name="MainMenu" xml:space="preserve">
-    <value>Menú Principal</value>
-  </data>
-  <data name="Back" xml:space="preserve">
-    <value>Volver</value>
-  </data>
-  <data name="ErrorNoAnimation" xml:space="preserve">
-    <value>No se está reproduciendo ninguna animación.</value>
-  </data>
-  <data name="ErrorUnsupportedTileType" xml:space="preserve">
-    <value>Tipo de baldosa no compatible '{0}' en la posición {1}, {2}.</value>
-  </data>
-  <data name="ErrorLevelExit" xml:space="preserve">
-    <value>Un nivel debe tener una salida.</value>
-  </data>
-  <data name="ErrorLevelStartingPoint" xml:space="preserve">
-    <value>Un nivel debe tener un punto de inicio.</value>
-  </data>
-  <data name="ErrorLevelOneStartingPoint" xml:space="preserve">
-    <value>Un nivel solo puede tener un punto de inicio.</value>
-  </data>
-  <data name="ErrorLevelOneExit" xml:space="preserve">
-    <value>Un nivel solo puede tener una salida.</value>
-  </data>
-  <data name="ErrorLevelLineLength" xml:space="preserve">
-    <value>La longitud de la línea {0} es diferente de todas las líneas anteriores.</value>
-  </data>
-  <data name="ErrorAccelerometerMustInitialize" xml:space="preserve">
-    <value>Debe inicializar antes de llamar a GetState()</value>
-  </data>
-  <data name="ErrorAccelerometerInitializeOnce" xml:space="preserve">
-    <value>Inicializar solo puede llamarse una vez</value>
-  </data>
-  <data name="ErrorAccelerometerToString" xml:space="preserve">
-    <value>Aceleración: {0}, Activo: {1}</value>
-  </data>
-  <data name="Time" xml:space="preserve">
-    <value>TIEMPO: </value>
-  </data>
-  <data name="Score" xml:space="preserve">
-    <value>PUNTUACIÓN: </value>
-  </data>
-  <data name="Loading" xml:space="preserve">
-    <value>Cargando....</value>
-  </data>
-  <data name="ExitQuestion" xml:space="preserve">
-    <value>¿Estás seguro de que deseas salir?</value>
-  </data>
-  <data name="Resume" xml:space="preserve">
-    <value>Reanudar</value>
-  </data>
-  <data name="Quit" xml:space="preserve">
-    <value>Abandonar</value>
-  </data>
-  <data name="Paused" xml:space="preserve">
-    <value>Pausado</value>
-  </data>
-  <data name="QuitQuestion" xml:space="preserve">
-    <value>¿Estás seguro de que deseas abandonar?</value>
-  </data>
-  <data name="About" xml:space="preserve">
-    <value>Acerca de</value>
-  </data>
-  <data name="NoButtonText" xml:space="preserve">
-    <value>[ No ]</value>
-  </data>
-  <data name="YesButtonText" xml:space="preserve">
-    <value>[ Sí ]</value>
-  </data>
-  <data name="DisplayMode" xml:space="preserve">
-    <value>Modo de Pantalla: {0}</value>
-  </data>
-  <data name="Windowed" xml:space="preserve">
-    <value>Ventana</value>
-  </data>
-  <data name="FullScreen" xml:space="preserve">
-    <value>Pantalla Completa</value>
-  </data>
-  <data name="Language" xml:space="preserve">
-    <value>Idioma: </value>
-  </data>
-  <data name="ParticleEffect" xml:space="preserve">
-    <value>Efecto de Partículas:</value>
-  </data>
-  <data name="LetsGo" xml:space="preserve">
-    <value>¡Vamos!</value>
-  </data>
-  <data name="MonoGameSite" xml:space="preserve">
-    <value>Sitio de MonoGame</value>
-  </data>
-  <data name="English" xml:space="preserve">
-    <value>ingles (Ingles)</value>
-  </data>
-  <data name="Tutorial" xml:space="preserve">
-    <value>Tutorial</value>
-  </data>
-  <data name="CollectThese" xml:space="preserve">
-    <value>¡Colecciona estos!</value>
-  </data>
-  <data name="GetToHere" xml:space="preserve">
-    <value>¡Llegue hasta aquí!</value>
-  </data>
-  <data name="DontDie" xml:space="preserve">
-    <value>¡No mueras!</value>
-  </data>
-  <data name="LevelCompleted" xml:space="preserve">
-    <value>¡Nivel Completado!</value>
-  </data>
-  <data name="TimeRanOut" xml:space="preserve">
-    <value>¡Se Acabó el Tiempo!</value>
-  </data>
-  <data name="YouDied" xml:space="preserve">
-    <value>¡Has Muerto!</value>
-  </data>
-  <data name="GemsCollected" xml:space="preserve">
-    <value>Gemas Recolectadas</value>
-  </data>
-  <data name="NewHighScore" xml:space="preserve">
-    <value>¡FELICITACIONES! Has conseguido un nuevo récord.</value>
-  </data>
-  <data name="ShowVirtualGamePad" xml:space="preserve">
-    <value>Mostrar GamePad virtual: </value>
-  </data>
-  <data name="YesButtonHelp" xml:space="preserve">
-    <value>Sí = Botón A, Espacio, Enter</value>
-  </data>
-  <data name="NoButtonHelp" xml:space="preserve">
-    <value>No = Botón B, Esc</value>
-  </data>
-  <data name="TapToPause" xml:space="preserve">
-    <value>Toca para pausar</value>
-  </data>
   <data name="TapAnywhere" xml:space="preserve">
-    <value>Tap Anywhere</value>
+    <value>Toca En Cualquier Sitio</value>
   </data>
   <data name="ClickAnywhere" xml:space="preserve">
     <value>Click Anywhere</value>
