--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.fr-FR.resx
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/Localization/Resources.fr-FR.resx
@@ -116,148 +116,7 @@
   </resheader>
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="Play" xml:space="preserve">
-    <value>Jouer</value>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Paramètres</value>
-  </data>
-  <data name="Exit" xml:space="preserve">
-    <value>Sortie</value>
-  </data>
-  <data name="MainMenu" xml:space="preserve">
-    <value>Menu Principal</value>
-  </data>
-  <data name="Back" xml:space="preserve">
-    <value>Retourner</value>
-  </data>
-  <data name="ErrorNoAnimation" xml:space="preserve">
-    <value>Aucune animation n'est actuellement en cours de lecture.</value>
-  </data>
-  <data name="ErrorUnsupportedTileType" xml:space="preserve">
-    <value>Caractère de type de tuile non pris en charge '{0}' à la position {1}, {2}.</value>
-  </data>
-  <data name="ErrorLevelExit" xml:space="preserve">
-    <value>Un niveau doit avoir une sortie.</value>
-  </data>
-  <data name="ErrorLevelStartingPoint" xml:space="preserve">
-    <value>Un niveau doit avoir un point de départ.</value>
-  </data>
-  <data name="ErrorLevelOneStartingPoint" xml:space="preserve">
-    <value>Un niveau ne peut avoir qu'un seul point de départ.</value>
-  </data>
-  <data name="ErrorLevelOneExit" xml:space="preserve">
-    <value>Un niveau ne peut avoir qu'une seule sortie.</value>
-  </data>
-  <data name="ErrorLevelLineLength" xml:space="preserve">
-    <value>La longueur de la ligne {0} est différente de toutes les lignes précédentes.</value>
-  </data>
-  <data name="ErrorAccelerometerMustInitialize" xml:space="preserve">
-    <value>Vous devez initialiser avant de pouvoir appeler GetState()</value>
-  </data>
-  <data name="ErrorAccelerometerInitializeOnce" xml:space="preserve">
-    <value>Initialize ne peut être appelé qu'une seule fois</value>
-  </data>
-  <data name="ErrorAccelerometerToString" xml:space="preserve">
-    <value>Accélération : {0}, C'est Actif : {1}</value>
-  </data>
-  <data name="Time" xml:space="preserve">
-    <value>TEMPS: </value>
-  </data>
-  <data name="Score" xml:space="preserve">
-    <value>SCORE: </value>
-  </data>
-  <data name="Loading" xml:space="preserve">
-    <value>Chargement...</value>
-  </data>
-  <data name="ExitQuestion" xml:space="preserve">
-    <value>Etes-vous sûr de vouloir sortier?</value>
-  </data>
-  <data name="Resume" xml:space="preserve">
-    <value>Reprendre</value>
-  </data>
-  <data name="Quit" xml:space="preserve">
-    <value>Quitter</value>
-  </data>
-  <data name="Paused" xml:space="preserve">
-    <value>En Pause</value>
-  </data>
-  <data name="QuitQuestion" xml:space="preserve">
-    <value>Etes-vous sûr de vouloir quitter?</value>
-  </data>
-  <data name="About" xml:space="preserve">
-    <value>À Propos</value>
-  </data>
-  <data name="NoButtonText" xml:space="preserve">
-    <value>[ Non ]</value>
-  </data>
-  <data name="YesButtonText" xml:space="preserve">
-    <value>[ Oui ]</value>
-  </data>
-  <data name="DisplayMode" xml:space="preserve">
-    <value>Mode D'affichage : {0}</value>
-  </data>
-  <data name="Windowed" xml:space="preserve">
-    <value>Fenêtré</value>
-  </data>
-  <data name="FullScreen" xml:space="preserve">
-    <value>Plein écran</value>
-  </data>
-  <data name="Language" xml:space="preserve">
-    <value>Langue: </value>
-  </data>
-  <data name="ParticleEffect" xml:space="preserve">
-    <value>Effet De Particules:</value>
-  </data>
-  <data name="LetsGo" xml:space="preserve">
-    <value>Allons-y!!!!</value>
-  </data>
-  <data name="MonoGameSite" xml:space="preserve">
-    <value>Site MonoGame</value>
-  </data>
-  <data name="English" xml:space="preserve">
-    <value>anglais (Anglais) </value>
-  </data>
-  <data name="Tutorial" xml:space="preserve">
-    <value>Tutorial</value>
-  </data>
-  <data name="CollectThese" xml:space="preserve">
-    <value>Collectionnez-les!</value>
-  </data>
-  <data name="GetToHere" xml:space="preserve">
-    <value>Arrive ici!</value>
-  </data>
-  <data name="DontDie" xml:space="preserve">
-    <value>Ne meurs pas!</value>
-  </data>
-  <data name="LevelCompleted" xml:space="preserve">
-    <value>Niveau Terminé !</value>
-  </data>
-  <data name="TimeRanOut" xml:space="preserve">
-    <value>Le Temps est Écoulé !</value>
-  </data>
-  <data name="YouDied" xml:space="preserve">
-    <value>Tu es MORT !</value>
-  </data>
-  <data name="GemsCollected" xml:space="preserve">
-    <value>Gemmes Collectées</value>
-  </data>
-  <data name="NewHighScore" xml:space="preserve">
-    <value>FÉLICITATIONS !! Vous avez établi un nouveau record.</value>
-  </data>
-  <data name="ShowVirtualGamePad" xml:space="preserve">
-    <value>Afficher le GamePad virtuel: </value>
-  </data>
-  <data name="YesButtonHelp" xml:space="preserve">
-    <value>Non = Bouton V, Esc</value>
-  </data>
-  <data name="NoButtonHelp" xml:space="preserve">
-    <value>Oui = Bouton A, Espace, Entrée</value>
-  </data>
-  <data name="TapToPause" xml:space="preserve">
-    <value>Appuyez pour mettre en pause</value>
-  </data>
+  </resheader>s
   <data name="TapAnywhere" xml:space="preserve">
     <value>Tap Anywhere</value>
   </data>
